--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bjornmelin-platform-io",
+  "name": "kegabmaranan-platform-io",
   "version": "0.1.1",
   "private": true,
   "scripts": {
@@ -34,6 +34,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
+    "react-icons": "^5.4.0",
     "resend": "^4.0.1",
     "superjson": "^2.2.0",
     "tailwind-merge": "^2.5.5",
